--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "graphviz>=0.21",
     "matplotlib>=3.10.6",
     "mlxtend>=0.23.4",
     "onnx>=1.19.0",
